hphp/test/slow/php7_backported/scalar-types/inexistent_class_hint_with_scalar_arg.php.expectf

Catchable fatal error: Argument 1 passed to foo() must be an instance of bar, null given in %s/inexistent_class_hint_with_scalar_arg.php on line 5
